tests/snapshots/run_wpt_conformance__coreml_conv2d_float16_4D_input_and_filter_tensors_all_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
conv2d.https.any.js conv2d float16 4D input and filter tensors all options, coreml
 Failed to build graph: coreml runtime failed: MLModel load failed: Failed to build the model execution plan using a model architecture file '<coreml-temp-model>' with error code: -14.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    conv2dInput: f16[1, 2, 5, 5];
  }

  consts {
    operand_0: f16[2] @bytes([87, 56, 186, 58]);
    operand_1: f16[2, 2, 1, 2] @bytes([28, 57, 248, 44, 34, 48, 77, 55, 120, 54, 193, 56, 143, 48, 59, 59]);
  }

  nodes {
    [conv2dOutput] = conv2d(conv2dInput, operand_1, operand_0, bias=0, dilations=[1, 1], filterLayout="hwio", groups=2, inputLayout="nchw", label="", padding=[1, 0, 0, 1], strides=[1, 1]);
  }

  outputs { conv2dOutput; }
}
