tests/snapshots/run_wpt_conformance__coreml_conv2d_float16_4D_input_and_filter_tensors_options_dilations.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
conv2d.https.any.js conv2d float16 4D input and filter tensors options.dilations, coreml
 Failed to build graph: coreml runtime failed: MLModel load failed: Failed to build the model execution plan using a model architecture file '<coreml-temp-model>' with error code: -5.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    conv2dInput: f16[1, 1, 5, 5];
  }

  consts {
    operand_0: f16[1, 1, 3, 3] @bytes([22, 54, 57, 56, 6, 51, 223, 53, 112, 53, 184, 54, 23, 54, 57, 50, 141, 56]);
  }

  nodes {
    [conv2dOutput] = conv2d(conv2dInput, operand_0, bias=null, dilations=[2, 2], filterLayout="", groups=1, inputLayout="", label="", padding=[], strides=[]);
  }

  outputs { conv2dOutput; }
}
